syntax = "proto3";
package goim_msg;
option go_package = "./pb";

// MessageFlag 消息类型定义
enum MessageFlag {
  None = 0;
  From = 1;
  To = 2;
  Group = 3;
  FriendAccepted = 11;
  GroupInvitationAccepted = 21;

  // 加密消息，服务端只负责转发，不进行持久化和分析
  EncryptedMessage = 501;
  // 加密通信第一次握手：发起者向接收者请求开启加密通信，该消息用于验证好友关系以及让对方确认
  EncryptMessageHandshake1 = 502;
  // 加密通信第二次握手：接收方生成非对称钥匙对，将公钥发送给发起者
  EncryptMessageHandshake2 = 503;
  // 加密通信第三次握手：发起者收到后用公钥加密一个随机数回复给接收者
  EncryptMessageHandshake3 = 504;
}

message BaseMsg {
  int64 from = 1;
  int64 to = 2;
  string content = 3;
  MessageFlag flag = 4;
  int64 timestamp = 5;
  int64 id = 6;
  int64 seq = 7;
  string deviceId = 8;
}

message SendMsgRequest{
  BaseMsg msg = 1;
}

message SendMsgResponse{
  int32 code = 1;
  string message = 2;
  int64 messageId = 3;
  int64 timestamp = 4;
  string content = 5;
}

// 同步离线消息请求
message SyncMsgRequest{
  int64 lastSeq = 1;
  int64 userID = 2;
  // 可选参数，指定消息来源
  optional int64 from = 3;
  // 可选参数，执行来源类型
  optional int32 flag = 4;
}

message SyncMsgResponse{
  int32 Code = 1;
  string message = 2;
  int64 initSeq = 3;
  int64 lastSeq = 4;
  repeated BaseMsg messages = 5;
}

message SyncGroupMsgRequest {
  int64 userID = 1;
  repeated int64 groups = 2;
  repeated int64 timestamps = 3;
}

message SingleGroupMessages {
  int64 groupID = 1;
  int64 startTimeout = 2;
  int64 lastTimeout = 3;
  repeated BaseMsg msgs = 4;
}

message SyncGroupMsgResponse {
  int32 code = 1;
  string message = 2;
  repeated SingleGroupMessages groupMessages = 3;
}

message SyncGroupLatestMessagesRequest {
  int64 groupID = 1;
  int32 limit = 2;
  int64 lastTimestamp = 3;
}

message SyncGroupLatestMessagesResponse {
  int32 code = 1;
  string message = 2;
  repeated BaseMsg msgs = 3;
}

message MqGroupMessage {
  int64 from = 1;
  int64 to = 2;
  string content = 3;
  MessageFlag flag = 4;
  int64 timestamp = 5;
  int64 id = 6;
  int64 seq = 7;
  string deviceId = 8;
  repeated string groupMembers = 9;
}

message Notification {
  int64 id = 1;
  int64 receiver = 2;
  int64 triggerUser = 3;
  string message = 4;
  bool read = 5;
  int32 type = 6;
  int64 timestamp = 7;
}

message ListNotificationRequest {
  int64 userID = 1;
  bool notRead = 2;
}

message ListNotificationResponse {
  int32 code = 1;
  string message = 2;
  repeated Notification notifications = 3;
}

message MarkNotificationReadRequest {
  int64 userID = 1;
  int64 notificationID = 2;
}

message MarkNotificationReadResponse {
  int32 code = 1;
  string message = 2;
}

message AddNotificationRequest {
  Notification notification = 1;
}

message AddNotificationResponse {
  int32 code = 1;
  string message = 2;
}

message GetNotificationRequest {
  int64 id = 1;
}

message GetNotificationResponse {
  int32 code = 1;
  string message = 2;
  Notification notification = 3;
}

message RemoveNotificationRequest {
  int64 id = 1;
}

message RemoveNotificationResponse {
  int32 code = 1;
  string message = 2;
}

service message {
  rpc SyncOfflineMessages(SyncMsgRequest) returns (SyncMsgResponse) {}
  // SendMessage 发送消息
  rpc SendMessage(SendMsgRequest) returns (SendMsgResponse) {}
  rpc SyncOfflineGroupMessages(SyncGroupMsgRequest) returns (SyncGroupMsgResponse) {}
  rpc SyncGroupLatestMessages(SyncGroupLatestMessagesRequest) returns (SyncGroupLatestMessagesResponse) {}

  rpc ListNotifications(ListNotificationRequest) returns (ListNotificationResponse) {}
  rpc MarkNotificationRead(MarkNotificationReadRequest) returns (MarkNotificationReadResponse) {}
  rpc AddNotification(AddNotificationRequest) returns (AddNotificationResponse) {}
  rpc GetNotification(GetNotificationRequest) returns (GetNotificationResponse) {}
  rpc RemoveNotification(RemoveNotificationRequest) returns (RemoveNotificationResponse) {}
}